--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og-title" content="TF2 Class Generator"/>
+    <meta property="og-description" id="embedClass"/>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <title>Class Generator</title>
     <link rel="stylesheet" href="style.css">
