Hope this one works

--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og-title" content="TF2 Class Generator"/>
     <meta property="og-description" id="embedClass"/>
+    <meta property="og-url" content="https://skulleven.github.io/TF2ClassGeneratorWeb/main.html"/>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <title>Class Generator</title>
     <link rel="stylesheet" href="style.css">
