Hope this works part 4

--- a/embed.html
+++ b/embed.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hehe</title>
 
-    <meta property="og:title" content="{{title}}">
-    <meta property="og:description" content=" {{playerEmbedInfo}}{{codeValue}} ">
+    <meta property="og:title" content="TF2 Class Generator">
+    <meta property="og:description" id="description">
 
 
-    <meta name="theme-color" content="{{themeColor}}">
+    <meta name="theme-color" content=>
 </head>
-
+<body>
+    <div id="embedChecker">embed</div>
+</body>
 
 </html>
