--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
 
   </head>
   <body style="background-color: rgb(42, 39, 37)">
+  <div id="embedChecker" style="color: rgb(42, 39, 37);">index</div>
     <div id="Box" class="box" style="background-color: rgb(55, 51, 45);">
       <div class="classPortrait">
         <img src="" id="anan" alt="Portrait">
