i give up... for now

--- a/embed.html
+++ b/embed.html
@@ -7,7 +7,7 @@
     <title>hehe</title>
 
     <meta property="og:title" content="TF2 Class Generator">
-    <meta property="og:description" name="description">
+    <meta property="og:description" content="A TF2 Class Generator">
 
 
     <meta name="theme-color" content=>
